removing margin reduction to fix underline issue on mobile

--- a/alexkaufmanlive/content/static/style.css
+++ b/alexkaufmanlive/content/static/style.css
@@ -435,6 +435,5 @@ td {
     }
     .title h1 {
         font-size: 24vw;
-        margin-bottom: -1rem;
     }
 }
